# is-the-order-a-wasip2

./: .editorconfig  .gitignore  README.md
chapter01/: README.md
chapter01/fd_write/: Cargo.toml  Makefile
chapter01/fd_write/src/: main.rs
chapter01/wasip2_stdout/: Cargo.toml  Makefile
chapter01/wasip2_stdout/src/: main.rs
chapter01/writev/: Makefile  hello.c
chapter02/: README.md
chapter02/calc/: Cargo.toml  Makefile
chapter02/calc-go/: Makefile  calc.go  go.mod
chapter02/calc-js/: Makefile  package-lock.json  package.json
chapter02/calc-js/src/: calc.js
chapter02/calc-js/wit/: world.wit
chapter02/calc-wat/: Makefile
chapter02/calc/src/: bindings.rs  lib.rs
chapter02/calc/wit/: calc.wit  world.wit
chapter02/run/: Cargo.toml  Makefile
chapter02/run/src/: bindings.rs  main.rs
chapter02/run/wit/: world.wit
chapter02/wit/: calc.wat  calc.wit
chapter03/: README.md
chapter03/cli/: Cargo.toml  Makefile
chapter03/cli/src/: bindings.rs
chapter03/cli/wit/: world.wit
chapter03/clocks/: Cargo.toml  Makefile
chapter03/clocks/src/: bindings.rs  lib.rs
chapter03/clocks/wit/: world.wit
chapter03/filesystem/: Cargo.toml  Makefile
chapter03/filesystem/src/: bindings.rs  lib.rs
chapter03/filesystem/wit/: world.wit
chapter03/http/: Cargo.toml  Makefile
chapter03/http/src/: bindings.rs  lib.rs
chapter03/io/: Cargo.toml  Makefile
chapter03/io/src/: bindings.rs  lib.rs
chapter03/io/wit/: world.wit
chapter03/io/wit/wasi/cli/: stdio.wit
chapter03/random/: Cargo.toml  Makefile
chapter03/sockets/: Cargo.toml  Makefile
(+15 files in other folders)
